# temporary-containers

./: .babelrc  .env  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .prettierignore  .tern-project  .travis.yml  Cargo.toml  LICENSE  README.AMO.md  README.md  TODO.todo  background.js  build-sign.js  build-sign.ts  fontello.json  karma.conf.js  manifest-update-url.ts  manifest.json  options.html  options.js  package-lock.json  package.json  semantic.json  tmpcontainer.js  tsconfig.build.json  tsconfig.json  tsconfig.lint.json  tslint.json  updates.json  webpack.config.js
.github/: ISSUE_TEMPLATE.md
docs/: README.md  api.md  automatic-mode.md  browser-fingerprinting.md  container-colors.md  debug-log.md  foxy-gestures.md  guide.md  limitations.md
icons/: LICENSE
ipcontext/: Cargo.toml  README.md  schema.sql
ipcontext/src/: context.rs  lib.rs  main.rs  netlink.rs  socks.rs  storage.rs
options/: .eslintrc  options.html  options.js
src/: .eslintrc  .eslintrc.json  background.js  background.ts  contentscript.js  contentscript.ts  global.d.ts  manifest.json  options.html  popup.html  shared.ts  types.ts  userscript.js
test/: .eslintrc  .eslintrc.json  background.alwaysopenin.test.js  background.alwaysopenin.test.ts  background.browseractions.test.js  background.browseractions.test.ts  background.cleanup.test.js  background.cleanup.test.ts  background.cookies.test.ts  background.isolation.test.js  background.isolation.test.ts  background.mac-race-conditions.test.js  background.mac.test.js  background.mac.test.ts  background.mouseclicks.test.js  global.d.ts  (+19 more)
(+201 files in other folders)
