[package]
name = "ipcontext"
version = "0.1.0"
authors = ["stoically <stoically@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-channel = "1.1.0"
async-std = { version = "1.6.2", features = ["tokio02", "attributes"] }
dirs = "3.0.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
futures-util = "0.3.5"
log = "0.4.8"
rand = { version = "0.7.3", features = ["small_rng"] }
rtnetlink = "0.3.0"
socket2 = "0.3.12"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["sqlite"] }
thiserror = "1.0.20"

[dev-dependencies]
hyper = "0.13.6"
reqwest = { version = "0.10.6", features = ["socks"] }
warp = "0.2.3"
